# FutureSDR

./: .gitignore  1.json  Cargo.toml  check.sh  settings.json
.github/workflows/: ci.yml
crates/futuredsp/src/: fir.rs
crates/types/src/: lib.rs
examples/lora/: Cargo.toml
examples/lora-direction-finding/: Cargo.toml  README.md
examples/lora-direction-finding/src/: lib.rs  main.rs  phase_difference.rs  tx_rx copy.rs  tx_rx.rs
examples/lora/src/: add_crc.rs  crc_verif.rs  decoder.rs  deinterleaver.rs  dewhitening.rs  fft_demod.rs  fft_demod.rs~  frame_sync.rs  gray_demap.rs  gray_mapping.rs  hamming_dec.rs  hamming_enc.rs  header.rs  header_decoder.rs  interleaver.rs  interpolator_taps.rs  lib.rs  mmse_fir_interpolator.rs  mmse_resampler.rs  modulate.rs  optfir.rs  pfb_channelizer_ccf.rs  pm_remez.rs  stream_deinterleaver.rs  utilities.rs  whitening.rs
examples/multi-trx/: Cargo.toml
examples/multi-trx/src/: PhyController.py  additive_white_gaussian_noise.rs  complex32_serializer.rs  dscp_priority_queue.rs  encoder_wlan.rs  gui.py  gui.ui  ip_dscp_rewriter.rs  lib.rs  mac_zigbee.rs  message_selector.rs  metrics_reporter.rs  tcp_exchanger.rs
examples/wlan/: Cargo.toml
examples/wlan/src/: frame_equalizer.rs  lib.rs  prefix.rs
examples/zigbee/: Cargo.toml
examples/zigbee/src/: decoder.rs  lib.rs  mac.rs
futuredsp/src/: fir.rs
src/blocks/: delay.rs  fir.rs  mod.rs  selector.rs  tcp_source.rs
src/blocks/seify/: builder.rs  sink.rs  source.rs
