[package]
name = "lora"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[[bin]]
name = "rx"
path = "src/bin/rx.rs"

[[bin]]
name = "tx"
path = "src/bin/tx.rs"

[[bin]]
name = "pfb_test"
path = "src/bin/pfb_test.rs"

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
futuresdr = { path = "../..", features = ["seify"] }
futuredsp = { path = "../../crates/futuredsp"}
seify = { version = ">=0.9.0", features = ["aaronia_http"] }
rustfft = "6.1.0"
ordered-float = "3.9.1"
scilib = "1.0.0"
num-traits = "0.2"
