[package]
name = "multitrx"
version = "0.0.1"
edition = "2021"
default-run = "rx"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rx"
path = "src/bin/rx.rs"

[[bin]]
name = "tx"
path = "src/bin/tx.rs"

[[bin]]
name = "trx"
path = "src/bin/trx.rs"

[[bin]]
name = "loopback"
path = "src/bin/loopback.rs"

[[bin]]
name = "uav"
path = "src/bin/uav.rs"

[[bin]]
name = "uav-loopback"
path = "src/bin/uav_loopback.rs"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
soapysdr = { version = "0.3.2", optional = true }
futuresdr = { path = "../..", features = ["aaronia_http", "soapy"]}
#futuredsp = { path = "../../futuredsp", version = "0.0.6" }
zigbee = { path = "../zigbee"}
wlan = { path = "../wlan"}
atty = "0.2"
forky-tun = { version = "0.5.5", features = ["async"] }
packet = "0.1.4"
futures = "0.3.28"
tokio = { version = "1.28.1", features = ["full"] }
async-process = "1.7.0"
async-net = "1.7.0"
gilrs = "0.10.2"
num = "0.4.0"
rand = "0.8.5"
rand_distr = "0.4.3"
seify = { version = "0.8.0", features = ["aaronia_http"] }
packet-builder = "0.7.0"
pnet = "0.34.0"
