[package]
name = "zigbee"
version = "0.0.1"
edition = "2021"
default-run = "rx"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["soapy"]
aaronia_http = ["futuresdr/aaronia_http"]
soapy = ["futuresdr/soapy"]

[[bin]]
name = "aaronia_rx"
path = "src/bin/aaronia_rx.rs"
required-features = ["aaronia"]

[[bin]]
name = "aaronia_tx"
path = "src/bin/aaronia_tx.rs"
required-features = ["aaronia"]

[[bin]]
name = "uav"
path = "src/bin/uav.rs"

#[features]
#default = []
#aaronia = ["futuresdr/aaronia"]

[dependencies]
env_logger = "0.9.0"
futures = "0.3.21"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.0.19", features = ["derive"] }
futuresdr = { path = "../..", features = ["seify"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1"
futuresdr = { path = "../.." }
leptos = { version = "0.4.5", features = ["csr", "nightly"] }
