[package]
name = "zigbee"
version = "0.0.1"
edition = "2021"
default-run = "rx"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["soapy"]
aaronia_http = ["futuresdr/aaronia_http"]
soapy = ["futuresdr/soapy"]

[[bin]]
name = "aaronia_rx"
path = "src/bin/aaronia_rx.rs"
required-features = ["aaronia"]

[[bin]]
name = "aaronia_tx"
path = "src/bin/aaronia_tx.rs"
required-features = ["aaronia"]

[[bin]]
name = "uav"
path = "src/bin/uav.rs"

#[features]
#default = []
#aaronia = ["futuresdr/aaronia"]

[dependencies]
env_logger = "0.9.0"
futures = "0.3.21"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4", features = ["derive"] }
futuresdr = { path = "../..", features = ["seify"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
futuresdr = { path = "../.." }
gloo-worker = "0.5"
js-sys = "0.3"
leptos = { version = "0.6", features = ["csr", "nightly"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
